--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <!-- Profile Picture (Clickable to Change) -->
     <ImageView
         android:id="@+id/userProfileImage"
         android:layout_width="100dp"
@@ -12,31 +13,33 @@
         android:src="@android:drawable/ic_menu_gallery"
         android:scaleType="centerCrop"
         android:background="@drawable/circle_background"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
+    <!-- Edit Name -->
+    <EditText
+        android:id="@+id/editUserName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Enter Name"
         android:text="User Name"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/userProfileImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <TextView
-        android:id="@+id/userEmail"
-        android:layout_width="wrap_content"
+    <!-- Save Button -->
+    <Button
+        android:id="@+id/buttonSave"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="user@example.com"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/userName"
+        android:text="Save"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/editUserName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
-
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
