--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -54,7 +54,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- RecyclerView for User Posts -->
+    <!-- RecyclerView for User's Posts -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewUserPosts"
         android:layout_width="match_parent"
@@ -62,4 +62,5 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/buttonSave"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
