--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,6 +38,9 @@
         <action
             android:id="@+id/action_signUp_to_home"
             app:destination="@id/nav_feed"/>
+        <action
+            android:id="@+id/action_signUp_to_signIn"
+            app:destination="@id/signInFragment"/> <!-- ✅ Added action for moving to Sign In -->
     </fragment>
 
     <!-- Home Screen (Feed) -->
@@ -45,14 +48,25 @@
         android:id="@+id/nav_feed"
         android:name="com.example.androidfinal.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_addPost"
+            app:destination="@id/nav_add"/>
+        <action
+            android:id="@+id/action_home_to_trending"
+            app:destination="@id/nav_trending"/>
+    </fragment>
 
     <!-- Add Post Screen -->
     <fragment
         android:id="@+id/nav_add"
         android:name="com.example.androidfinal.AddPostFragment"
         android:label="Add Post"
-        tools:layout="@layout/fragment_add_post"/>
+        tools:layout="@layout/fragment_add_post">
+        <action
+            android:id="@+id/action_addPost_to_home"
+            app:destination="@id/nav_feed"/>
+    </fragment>
 
     <!-- Trending Screen -->
     <fragment
