--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,17 +4,19 @@
 
     <item
         android:id="@+id/nav_feed"
-        android:icon="@android:drawable/ic_menu_gallery"
+        android:icon="@drawable/favourite_page"
         android:title="Feed" />
 
     <item
         android:id="@+id/nav_add"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@drawable/add__1_"
+        android:iconTintMode="src_atop"
         android:title="Add" />
 
     <item
         android:id="@+id/nav_trending"
-        android:icon="@android:drawable/ic_menu_view"
+        android:icon="@drawable/trend"
+        android:iconTintMode="src_atop"
         android:title="Trending" />
 
 </menu>
