--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -6,44 +6,46 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editTextEpisodeTitle"
+    <Spinner
+        android:id="@+id/spinnerEpisodeTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
         android:hint="Episode Title"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextReview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Write your review..."
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextEpisodeTitle"
+        android:hint="Write your review..."
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/spinnerEpisodeTitle" />
 
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:numStars="10"
         android:stepSize="1"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextReview"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/editTextReview" />
 
     <Button
         android:id="@+id/buttonSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/ratingBar"
+        android:text="Submit"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/ratingBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
