--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="#ADD8E6"
         android:title="AniRate"
         app:title="AniRate"
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
