--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_welcome_to_signUp"
             app:destination="@id/signUpFragment"/>
+        <action
+            android:id="@+id/action_welcome_to_home"
+            app:destination="@id/nav_feed"/>
     </fragment>
 
     <!-- Sign In Screen -->
