--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -62,24 +62,26 @@
             app:layout_constraintStart_toEndOf="@+id/textViewRating"
             app:layout_constraintTop_toBottomOf="@+id/textViewReview" />
 
+        <!-- Edit Button (Smaller) -->
         <ImageButton
             android:id="@+id/buttonEditPost"
-            android:layout_width="34dp"
-            android:layout_height="38dp"
-            android:layout_margin="8dp"
+            android:layout_width="26dp"
+            android:layout_height="30dp"
+            android:layout_margin="6dp"
             android:background="@null"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.547"
+            app:layout_constraintVertical_bias="0.5"
             app:srcCompat="@drawable/pencil__1_" />
 
+        <!-- Delete Button (Smaller) -->
         <ImageButton
             android:id="@+id/buttonDeletePost"
-            android:layout_width="34dp"
-            android:layout_height="38dp"
-            android:layout_marginEnd="20dp"
+            android:layout_width="26dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="14dp"
             android:background="@null"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="@+id/buttonEditPost"
