--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -10,8 +9,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="12dp">
 
+        <!-- Username -->
         <TextView
             android:id="@+id/textViewUsername"
             android:layout_width="wrap_content"
@@ -20,86 +20,94 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
+        <!-- Episode Title -->
         <TextView
             android:id="@+id/textViewEpisodeTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="Episode Title"
             android:textSize="14sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewUsername" />
+            app:layout_constraintEnd_toStartOf="@id/imageViewPhoto"
+            app:layout_constraintTop_toBottomOf="@id/textViewUsername"/>
 
+        <!-- Review -->
         <TextView
             android:id="@+id/textViewReview"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:text="Review text"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewEpisodeTitle" />
+            app:layout_constraintEnd_toStartOf="@id/imageViewPhoto"
+            app:layout_constraintTop_toBottomOf="@id/textViewEpisodeTitle"/>
 
+        <!-- Rating -->
         <TextView
             android:id="@+id/textViewRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="⭐ Rating"
+            android:text="⭐ 4/10"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewReview" />
 
+        <!-- Date -->
         <TextView
             android:id="@+id/textViewTimeStamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Date"
+            android:layout_marginStart="10dp"
+            android:text="20/03/2025"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/textViewRating"
             app:layout_constraintTop_toBottomOf="@+id/textViewReview" />
 
-        <!-- Edit Button (Smaller) -->
-        <ImageButton
-            android:id="@+id/buttonEditPost"
-            android:layout_width="26dp"
-            android:layout_height="30dp"
-            android:layout_margin="6dp"
-            android:background="@null"
-            android:scaleType="centerInside"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:srcCompat="@drawable/pencil__1_" />
-
-        <!-- Delete Button (Smaller) -->
-        <ImageButton
-            android:id="@+id/buttonDeletePost"
-            android:layout_width="26dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="14dp"
-            android:background="@null"
-            android:scaleType="centerInside"
-            app:layout_constraintBottom_toBottomOf="@+id/buttonEditPost"
-            app:layout_constraintEnd_toStartOf="@+id/buttonEditPost"
-            app:layout_constraintTop_toTopOf="@+id/buttonEditPost"
-            app:srcCompat="@drawable/bin" />
-
-        <!-- Post Image (Smaller) -->
+        <!-- Image (Post Image) -->
         <ImageView
             android:id="@+id/imageViewPhoto"
-            android:layout_width="70dp"
-            android:layout_height="64dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="@+id/buttonDeletePost"
-            app:layout_constraintEnd_toStartOf="@+id/buttonDeletePost"
-            app:layout_constraintStart_toEndOf="@+id/textViewTimeStamp"
-            app:layout_constraintTop_toTopOf="@+id/buttonDeletePost"
-            app:srcCompat="@drawable/noanime" />
+            android:src="@drawable/noanime"
+            app:layout_constraintEnd_toStartOf="@id/buttonDeletePost"
+            app:layout_constraintTop_toTopOf="@+id/textViewEpisodeTitle"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewTimeStamp"/>
+
+        <!-- Delete Button -->
+        <ImageButton
+            android:id="@+id/buttonDeletePost"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="6dp"
+            android:background="@null"
+            android:scaleType="centerInside"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageViewPhoto"
+            android:src="@drawable/bin"/>
+
+        <!-- Edit Button -->
+        <ImageButton
+            android:id="@+id/buttonEditPost"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="6dp"
+            android:background="@null"
+            android:scaleType="centerInside"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoto"
+            android:src="@drawable/pencil__1_"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
