--- a/app/src/main/res/layout/dialog_edit_post.xml
+++ b/app/src/main/res/layout/dialog_edit_post.xml
@@ -20,9 +20,17 @@
 
     <RatingBar
         android:id="@+id/ratingBar"
+        style="?android:attr/ratingBarStyleIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:theme="@style/RatingBarTheme"
+        android:isIndicator="false"
         android:numStars="10"
-        android:stepSize="1"
-        android:layout_marginTop="8dp"/>
+        android:rating="5"
+        android:scaleX="0.9"
+        android:scaleY="0.9"
+        android:stepSize="1" />
+
+
 </LinearLayout>
