--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -32,8 +32,12 @@
         android:layout_marginTop="8dp"
         android:numStars="10"
         android:stepSize="1"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:isIndicator="false"
+        android:rating="5"
+        android:theme="@style/RatingBarTheme"
+        style="?android:attr/ratingBarStyleIndicator"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editTextReview" />
 
     <Button
