--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="16dp"
+    app:cardElevation="8dp"
+    android:background="@drawable/gradient_card_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,6 +21,7 @@
             android:text="User Name"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -32,6 +35,7 @@
             android:text="Episode Title"
             android:textSize="14sp"
             android:textStyle="italic"
+            android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/imageViewPhoto"
             app:layout_constraintTop_toBottomOf="@id/textViewUsername"/>
@@ -45,6 +49,7 @@
             android:ellipsize="end"
             android:text="Review text"
             android:textSize="14sp"
+            android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/imageViewPhoto"
             app:layout_constraintTop_toBottomOf="@id/textViewEpisodeTitle"/>
@@ -79,6 +84,7 @@
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:scaleType="centerCrop"
+            android:background="@android:color/white"
             android:src="@drawable/noanime"
             app:layout_constraintEnd_toStartOf="@id/buttonDeletePost"
             app:layout_constraintTop_toTopOf="@+id/textViewEpisodeTitle"
