--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -18,7 +18,7 @@
             android:id="@+id/textViewUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
+            android:text=""
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
