--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -15,6 +15,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/circle_background"
+        android:clipToOutline="true"
         android:clickable="true"
         android:focusable="true"
         android:scaleType="centerCrop"
