--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -82,9 +82,9 @@
             android:id="@+id/imageViewPhoto"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginStart="8dp"
             android:scaleType="centerCrop"
-            android:background="@android:color/white"
+            android:background="@drawable/circle_background"
+            android:clipToOutline="true"
             android:src="@drawable/noanime"
             app:layout_constraintEnd_toStartOf="@id/buttonDeletePost"
             app:layout_constraintTop_toTopOf="@+id/textViewEpisodeTitle"
