--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -61,6 +61,7 @@
         android:scaleType="centerCrop"
         android:visibility="gone"
         android:background="@drawable/circle_background"
+        android:clipToOutline="true"
         app:layout_constraintTop_toBottomOf="@id/buttonChooseImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
