--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -28,8 +28,9 @@
         android:layout_height="100dp"
         android:src="@android:drawable/ic_menu_gallery"
         android:scaleType="centerCrop"
-        android:visibility="gone"
         android:background="@drawable/circle_background"
+        android:clipToOutline="true"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/signUpTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
