--- a/app/src/main/res/layout/dialog_edit_post.xml
+++ b/app/src/main/res/layout/dialog_edit_post.xml
@@ -2,21 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/imagePreview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:background="@drawable/circle_background"
+        android:clickable="true"
+        android:clipToOutline="true"
+        android:contentDescription="Select Image"
+        android:focusable="true"
+        android:scaleType="centerCrop"
+        android:src="@android:drawable/ic_menu_gallery" />
 
     <EditText
         android:id="@+id/editEpisodeTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Episode Title"/>
+        android:clickable="false"
+        android:enabled="false"
+        android:focusable="false"
+        android:hint="Episode Title" />
 
     <EditText
         android:id="@+id/editReview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Review"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:hint="Review" />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -24,13 +40,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:theme="@style/RatingBarTheme"
         android:isIndicator="false"
         android:numStars="10"
         android:rating="5"
         android:scaleX="0.9"
         android:scaleY="0.9"
-        android:stepSize="1" />
+        android:stepSize="1"
+        android:theme="@style/RatingBarTheme" />
 
 
 </LinearLayout>
